- Fix text-overflow:ellipsis issues on messages list in FF7 and Webkit (#1488061)

--- a/skins/default/mail.css
+++ b/skins/default/mail.css
@@ -861,7 +861,6 @@ body.messagelist
 #messagelist tbody tr td.subject a
 {
   cursor: default;
-  display: inline-block;
   vertical-align: middle;
 }
 
